--- a/timeline/timeline.html
+++ b/timeline/timeline.html
@@ -103,7 +103,7 @@
     </div>
     <audio id="bg-music" loop>
       <source
-        src="images/Hajar Janma  Rockheads Nepal  Official Music Video.mp3"
+        src="../images/Hajar Janma  Rockheads Nepal  Official Music Video.mp3"
         type="audio/mpeg"
       />
     </audio>
